<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".SettingsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="25dp"
        android:paddingBottom="25dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/menuLayout"
            android:layout_width="360dp"
            android:layout_height="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_back"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:background="@drawable/custom_buttons"
                android:text="@string/backbutton"
                android:textSize="34sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="24dp"
                android:contentDescription="@string/settings"
                app:layout_constraintStart_toEndOf="@+id/button_back"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/setting" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_save"
                android:layout_width="100dp"
                android:layout_height="55dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/custom_buttons"
                android:backgroundTint="#D2259C1D"
                android:backgroundTintMode="src_in"
                android:contentDescription="@string/save_settings"
                android:text="@string/save_settings"
                android:textColor="#000000"
                android:textSize="15sp"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/LanguageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/settings_1"
            android:textColor="#000000"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/menuLayout" />

        <TextView
            android:id="@+id/voiceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/settings_2"
            android:textColor="#000000"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings" />

        <TextView
            android:id="@+id/BackgroundText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="72dp"
            android:text="@string/settings_3"
            android:textColor="#000000"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/voiceText" />

        <RadioGroup
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LanguageText">


            <RadioButton
                android:id="@+id/language_english"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/settings_1_lang1"
                android:textColor="#154"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/LanguageText" />

            <RadioButton
                android:id="@+id/language_chinese"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/settings_1_lang2"
                android:textColor="#154"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/language_english"
                app:layout_constraintTop_toBottomOf="@+id/LanguageText" />

            <RadioButton
                android:id="@+id/language_korean"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/settings_1_lang3"
                android:textColor="#154"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/language_english"
                app:layout_constraintTop_toBottomOf="@+id/LanguageText" />

            <RadioButton
                android:id="@+id/language_hindi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/settings_1_lang5"
                android:textColor="#154"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/language_english" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/settings2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/BackgroundText">

            <RadioButton
                android:id="@+id/backgroundselector1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/settings_3_bg1"
                android:textColor="#154"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/BackgroundText" />

            <RadioButton
                android:id="@+id/backgroundselector2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/settings_3_bg2"
                android:textColor="#154"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/BackgroundText" />

            <RadioButton
                android:id="@+id/backgroundselector3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/settings_3_bg3"
                android:textColor="#154"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/BackgroundText" />


        </RadioGroup>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/settings_2_voice4"
            android:textColor="#154"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/voiceText" />

        <SeekBar
            android:id="@+id/seek_bar_pitch"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="14dp"
            android:progress="50"
            android:textColor="#154"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/seek_bar_speed" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/settings_2_voice3"
            android:textColor="#154"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <SeekBar
            android:id="@+id/seek_bar_speed"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:progress="50"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/voiceText" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>